prompt user to opt-in to gamepad

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<script type="text/javascript" src="static/js/three.min.js"></script>
-<script type="text/javascript" src="static/js/eventemitter2.min.js"></script>
-<script type="text/javascript" src="static/js/roslib.js"></script>
-<script type="text/javascript" src="static/js/ros3d.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@1,900&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
-<script type="text/javascript" src="dist/teleopxyz.js"></script>
-<link rel="stylesheet" href="static/main.css">
+  <meta charset="utf-8" />
+  <meta name="description" content="Robotics tools for hackers on the go">
+  <meta name="keywords" content="ROS, Robotics Operating System, rviz, teleop, rosrun, roslaunch, robot, robotics, robot cloud, cloud robotics">
+  <title>teleop.xyz - sense, plan, party 🤘</title>
+  <script type="text/javascript" src="static/js/three.min.js"></script>
+  <script type="text/javascript" src="static/js/eventemitter2.min.js"></script>
+  <script type="text/javascript" src="static/js/roslib.js"></script>
+  <script type="text/javascript" src="static/js/ros3d.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@1,900&family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="dist/teleopxyz.js"></script>
+  <link rel="stylesheet" href="static/main.css">
 
 
 <script>
