--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ function setConnectionStatus(text, color){
   statusDot.style.backgroundColor = color
 }
 
-function init(){
+async function init(){
   const form = document.getElementsByName('connectionForm')[0]
   form.addEventListener('submit', startConnection);
 
@@ -76,8 +76,11 @@ function init(){
     }
   }
 
-  setConnectionStatus('Offline', 'grey')
+  await setConnectionStatus('Offline', 'grey')
   openConnectionForm()
+
+
+  await setupServiceWorker()
 
 }
 
@@ -136,6 +139,52 @@ function reload(){
 
 function gotoGithub(){
   window.location = 'https://github.com/datapartyjs/teleop-xyz'
+}
+
+function onServiceWorkerMessage(message){
+  console.log('service-worker-message: ', message)
+}
+
+function onServicerWorkerError(error){
+  console.error('service-worker-error: ', error)
+}
+
+let serviceWorker
+
+async function setupServiceWorker(){
+  if ('serviceWorker' in navigator) {
+    const registration = await navigator.serviceWorker.register('service-worker.js')
+
+    navigator.serviceWorker.addEventListener('message', onServiceWorkerMessage)
+    navigator.serviceWorker.addEventListener('error', onServicerWorkerError)
+
+    registration.addEventListener('updatefound', ()=>{
+      console.log('service-worker-registration: Update found')
+    })
+
+
+    if (registration.installing) {
+      serviceWorker = registration.installing
+      console.log('servicer-worker installing')
+    } else if (registration.waiting) {
+      serviceWorker = registration.waiting
+      console.log('servicer-worker waiting')
+    } else if (registration.active) {
+      serviceWorker = registration.active
+      console.log('servicer-worker active')
+    }
+
+    if (serviceWorker) {
+      // logState(serviceWorker.state);
+      serviceWorker.addEventListener('statechange',  (event) => {
+        console.log('servicer-worker statechange ', event)
+      })
+
+    }
+  } else {
+      // The current browser doesn't support service workers.
+      console.warn('service-worker: No service worker support')
+  }
 }
 
 </script>
